0.29 
 - Fixed documentation issues with S3, CloudFront and Route53 (ilmari)
 - Fixed bug (Issue #108): Services that expected strings as parameters would accept numbers,
   Method(StringParameter => 33), and Paws would generate "StringParameter":33 in the request
   to the service, but the AWS API would error out, forcing the programmer to stringify his input
   Method(StringParameter => "33"). Paws will now auto-stringify the contents in these parameters
   so AWS will accept them correctly, and the programmer doesn't have to worry about stringifying
   his inputs. Thanks to ilmari and rpcme
 - RDS API update: DescribeSourceRegions
 - ServiceCatalog API update: AccessLevelFilter support
 - CloudFront API update: version 2016-09-07 support
 - CodePipeline API update: GetPipelineExecution
 - CognitoIdp API update: UserImportJob operations
 - Gamelift API update: OperatingSystem for CreateBuild
 - Route53 API update: TestDNSAnswer
 - CodeDeploy API update
 - RedShift API update: Enhanced VPC Routing
 - RDS API update: Timezones and ReadEnpoints
 - EMR API update: SecurityConfigurations
 - IoT API update

0.28 30 Aug 2015 23:45:00
 - On errors 503 XMLResponse would not process the error correctly (returning
   a non-Paws exception, so the error couldn't be retried. (brianhartsock)
 - New API: Snowball
 - New API: KinesisAnalytics
 - New API: ELBv2 (Application Load Balancer)
 - Route53: API update: GetDomainSuggestions, RenewDomain, ViewBilling
 - RDS: API update: RestoreDBClusterFromS3
 - KMS: API update: DeleteImportedKeyMaterial, GetParametersForImport, ImportKeyMaterial
 - WorkSpaces API update: DescribeWorkspacesConnectionStatus ModifyWorkspaceProperties StartWorkspaces StopWorkspaces
 - IoT API update: ThingTypes operations, ListOutgoingCertificates
 - MarketplaceCommerceAnalytics API update: StartSupportDataExport
 - GameLift API update: SearchGameSessions